# remote-desktop

./: .gitignore  CMakeLists.txt
remote-desktop/client/: CMakeLists.txt
remote-desktop/client/src/: main.cpp
remote-desktop/server/: CMakeLists.txt
remote-desktop/server/src/: main.cpp  manager.cpp  manager.h  screen.cpp  screen.h
